Sun Aug 15 23:15:34 BST 2004  Olly Betts <olly@survex.com>

	* backends/Makefile.am,backends/inmemory/Makefile.am: Fixed to compile
	  with --disable-inmemory (bug #33).

Sat Aug 14 18:56:06 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Improved library versioning comment.

Sat Aug 14 18:55:17 BST 2004  Olly Betts <olly@survex.com>

	* docs/overview.html: Fixed om_queryop to Xapian::Query::op, and added
	  missing OP_* codes to the list.

Sat Aug 14 17:44:39 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/bcursor.h,backends/quartz/btree.cc,
	  backends/quartz/btree.h,bin/quartzcompact.cc,docs/quartzdesign.html:
	  Updated quartz design docs to reflect recent changes.  Also pulled
	  out the Btree and Bcursor API docs and slotted them in as doxygen
	  documentation comments - this way they're much more likely to
	  be kept up-to-date.

Sat Aug 14 15:59:07 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Removed unused
	  Btree default ctor.

Sat Aug 14 15:45:28 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Don't redundantly
	  store next_revision - it's always just revision_number + 1.

Sat Aug 14 15:30:30 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Implemented Btree::cancel directly rather
	  than closing and reopening the Btree.

Sat Aug 14 14:46:43 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,bin/quartzcheck.cc,bin/quartzcompact.cc,
	  bin/quartzdump.cc,tests/btreetest.cc,tests/quartztest.cc,
	  testsuite/btreecheck.cc,testsuite/btreecheck.h: Eliminated
	  QuartzTable which had become just a thin wrapper around Btree.

Fri Aug 13 19:19:02 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc:
	  QuartzPostList::move_to_chunk_containing now calls next_chunk if
	  required, rather than forcing the caller to do the fix-up.

Fri Aug 13 17:54:53 BST 2004  Olly Betts <olly@survex.com>
